# rtfm-lookup

./: .gitignore  LICENSE  README.md  data  pyproject.toml  test.py
.github/ISSUE_TEMPLATE/: bug_report.yml
rtfm_lookup/: __init__.py  _types.py  better_lock.py  entry.py  enums.py  filler.py  fuzzy.py  manager.py  manual.py  utils.py
rtfm_lookup/indexers/: __init__.py  base.py  cidex.py  gidocgen.py  intersphinx.py  mkdocs.py
