[project]
name = "rtfm-lookup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.13",
    "msgspec>=0.19.0",
]

[tool.ruff]
exclude = [
    ".venv",
    "rtfm_lookup/fuzzy.py",
]

[tool.ruff.lint]
select = [
    "C4", # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "E", # https://docs.astral.sh/ruff/rules/#error-e
    "F", # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "G", # https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
    "I", # https://docs.astral.sh/ruff/rules/#isort-i
    "RUF", # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "SIM", # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "TC", # https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "W", # https://docs.astral.sh/ruff/rules/#warning-w
    "PERF", # https://docs.astral.sh/ruff/rules/#perflint-perf
    "ANN",  # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "PGH", # https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh
    "RET", # https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "PLE", # https://docs.astral.sh/ruff/rules/#error-e_1
]
ignore = [
    "SIM105", # https://docs.astral.sh/ruff/rules/suppressible-exception/
    "E501", # https://docs.astral.sh/ruff/rules/line-too-long
    "ANN401", # https://docs.astral.sh/ruff/rules/any-type/
    "RET503", # https://docs.astral.sh/ruff/rules/implicit-return/
    "RET502", # https://docs.astral.sh/ruff/rules/implicit-return-value/
    "ANN201", # https://docs.astral.sh/ruff/rules/missing-return-type-undocumented-public-function
    "PGH003", # https://docs.astral.sh/ruff/rules/blanket-type-ignore
    "ANN202", # https://docs.astral.sh/ruff/rules/missing-return-type-private-function
    "RUF006", # https://docs.astral.sh/ruff/rules/asyncio-dangling-task
    "F403", # https://docs.astral.sh/ruff/rules/undefined-local-with-import-star
    "S101", # https://docs.astral.sh/ruff/rules/assert
    "UP040", # https://docs.astral.sh/ruff/rules/non-pep695-type-alias
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
include = [
    "rtfm_lookup"
]